--- a/src/sections/me/Me.module.scss
+++ b/src/sections/me/Me.module.scss
@@ -187,6 +187,9 @@
             display: flex;
             align-items: center;
             justify-content: flex-start;
+            overflow: hidden;
+            transition: width 1.5s;
+            white-space: nowrap;
 
             &:first-child {
                 margin-top: 0;
