--- a/src/sections/projects/Projects.module.scss
+++ b/src/sections/projects/Projects.module.scss
@@ -7,6 +7,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-end;
+    min-height: 100%;
 
     .leftContainer {
         width: 400px;
@@ -113,9 +114,11 @@
 
 .right {
     padding: 70px 10px 70px 70px;
+    max-width: 550px;
 
     .rightContainer {
         display: flex;
+        position: relative;
 
         .messages {
             display: flex;
@@ -125,10 +128,14 @@
 
             .message {
                 color: black;
-                padding: 10px 20px;
+                padding: 7px 20px;
                 background-color: rgba(0, 0, 0, 0.05);
                 margin-top: 5px;
                 min-width: 150px;
+                display: inline-flex;
+                gap: 5px;
+                flex-wrap: wrap;
+                align-items: center;
                 max-width: 350px;
             }
 
@@ -145,6 +152,19 @@
                 border-radius: 5px 25px 25px 5px;
             }
 
+            .picture {
+                margin-top: 5px;
+
+                overflow: hidden;
+                border-radius: 5px 25px 25px 5px;
+                border: 1px solid transparentize($color: $primary, $amount: 0.9);
+                max-height: 350px;
+                max-width: 450px;
+                > img {
+                    width: 100%;
+                }
+            }
+
             .bottomMessage {
                 @extend .message;
                 border-radius: 5px 25px 25px 25px;
@@ -154,10 +174,14 @@
                 border-radius: 999px;
                 background-color: rgba(0, 0, 0, 0.05);
                 padding: 2px 15px;
+                white-space: nowrap;
             }
         }
 
         .link {
+            position: absolute;
+            right: 10px;
+
             .linkElm {
                 color: black;
                 margin-left: 10px;
@@ -175,6 +199,7 @@
 
                 .linkName {
                     margin-right: 20px;
+                    white-space: nowrap;
                 }
             }
         }
