--- a/src/sections/projects/Projects.module.scss
+++ b/src/sections/projects/Projects.module.scss
@@ -9,11 +9,24 @@
     align-items: flex-end;
     min-height: 100%;
 
+    @media screen and (max-width: $tablet-max) {
+        & {
+            align-items: center;
+        }
+    }
+
     .leftContainer {
         width: 400px;
         max-width: 400px;
         text-align: left;
         padding: 50px 0 200px 0;
+
+        @media screen and (max-width: $tablet-max) {
+            & {
+                padding: 50px 50px 20px 20px;
+                width: unset;
+            }
+        }
 
         .title {
             color: white;
@@ -25,6 +38,12 @@
             margin: 100px 0 0 0;
             display: flex;
             align-items: flex-end;
+
+            @media screen and (max-width: $tablet-max) {
+                & {
+                    margin: 20px 0 0 0;
+                }
+            }
 
             .name {
                 $size: 40px;
@@ -116,6 +135,15 @@
     padding: 70px 10px 70px 70px;
     max-width: 550px;
 
+    @media screen and (max-width: $tablet-max) {
+        & {
+            padding: 20px 50px 20px 50px;
+            display: flex;
+            justify-content: center;
+            max-width: none;
+        }
+    }
+
     .rightContainer {
         display: flex;
         position: relative;
@@ -125,6 +153,12 @@
             flex-direction: column;
             align-items: flex-start;
             padding: 80px 0;
+
+            @media screen and (max-width: $tablet-max) {
+                & {
+                    padding: 20px 0;
+                }
+            }
 
             .message {
                 color: black;
