feat(img): Allow to open a picture

--- a/src/sections/projects/Projects.module.scss
+++ b/src/sections/projects/Projects.module.scss
@@ -188,6 +188,7 @@
 
             .picture {
                 margin-top: 5px;
+                cursor: pointer;
 
                 overflow: hidden;
                 border-radius: 5px 25px 25px 5px;
