--- a/src/sections/me/Me.module.scss
+++ b/src/sections/me/Me.module.scss
@@ -52,9 +52,20 @@
 
 .messageBottom {
     @extend .message;
+    display: block;
     margin-top: 5px;
     border-radius: 5px 25px 25px 25px;
     align-self: flex-start;
+
+    a {
+        color: $primary;
+        font-weight: 800;
+
+        &:hover {
+            text-decoration: underline;
+            color: $primary;
+        }
+    }
 }
 
 .meCard {
